--- a/Blazor/wwwroot/app.css
+++ b/Blazor/wwwroot/app.css
@@ -58,3 +58,18 @@ h1:focus {
 .form-floating > .form-control-plaintext:focus::placeholder, .form-floating > .form-control:focus::placeholder {
     text-align: start;
 }
+
+.card {
+    border-radius: 1rem;
+}
+.card-title i {
+    color: #0d6efd;
+}
+ul {
+    list-style: none;
+    padding-left: 0;
+}
+ul li i {
+    color: #198754;
+    margin-right: 0.5em;
+}
